--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <main>
         <section>
             <h2>关于我们</h2>
-            <p>这里是我们的公司介绍。</p>
+            <p>围系于君 祝君健康</p>
         </section>
         
         <section>
             <h2>最新消息</h2>
-            <p>这里是一些最新的消息和更新。</p>
+            <p>让我们一起期待更多美好的发生。</p>
         </section>
     </main>
     
